# word-of-the-day-article

./: .flake8  .isort.cfg  Dockerfile  Makefile  README.md  docker-compose-ci.yaml  docker-compose-test.yaml  manage.py  pyproject.toml  pytest.ini
api/articles/: model.py  router.py  service.py
api/ping/: router.py  service.py
app/: application.py  cache.py  context.py  db.py  exceptions.py  openai_client.py  wordsmith.py
settings/: __init__.py  base.py  logging.py
tests/: conftest.py
tests/api/: test_get_article_handler.py
tests/ping/: test_ping.py
tests/test_api/: test_get_article_handler.py  test_ping.py
tests/test_clients/: test_cache.py  test_openai_client.py  test_wordsmith_client.py
tests/test_utils/: test_retry.py
utils/: retry.py
